# learn-opengl

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/src/: blendTriangle.cpp  rectangle.cpp  shadersUniform.cpp  shaders_class.cpp  temp.cpp  triangle.cpp
apps/src/10cubes/: 10cubes.cpp
apps/src/coordinate/: coordinate.cpp
apps/src/cube/: cube.cpp
apps/src/mov3d/: mov3d.cpp
apps/src/movement/: movement.cpp  shader.vs
apps/src/pad/: pad.cpp  shader.fs  shader.vs
apps/src/rectangles/: rectangle.cpp
apps/src/smiley/: shader.fs  smiley.cpp
apps/src/texture/: texture.cpp
apps/src/transformations/: transformation.cpp
libs/: CMakeLists.txt
libs/external_libs/: CMakeLists.txt
libs/external_libs/glad/: glad.c
libs/external_libs/glad/include/glad/: glad.h
libs/external_libs/glm/: CMakeLists.txt
libs/internal_libs/shaders/: CMakeLists.txt
libs/internal_libs/shaders/include/: shader_s.h
libs/internal_libs/shaders/src/: shader_s.cpp
